--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,10 @@ h5{
   width:150px;
   border-radius: 100px;
   background-color: var(--White);
+  cursor: pointer;
+}
+.circle:hover{
+  color: var(--lightBlue);
 }
 .pin{
   position: relative;
@@ -176,6 +180,12 @@ h5{
 }
 .bar3text{
   color: black !important;
+}
+.bar3title{
+  display: inline-block;
+}
+.bar3title:hover{
+  color: var(--Purple);
 }
 @media screen and (max-width: 950px){
   .expandable>ul>li{
