--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --Dark:#100303;
   --lightBlue:#43d8c9;
   --lightBluelight:rgba(48, 215, 221, 0.5);
+  --lightBluelightdark:rgba(48, 215, 221, 0.8);
   --lightPurple:#fee0ff;
   --lightGrey:rgba(0,0,0,.3);
 
@@ -103,7 +104,7 @@ nav{
   height: 3px;
   width: 0px;
   position: absolute;
-  background-color:var(--Purple);
+  background-color:var(--lightBlue);
   bottom: 0;
   left: 50%;
   transition: ease-in-out .3s;
@@ -117,10 +118,10 @@ nav{
   display: block;
   position: absolute;
   width: auto;
-  top: 43px;
+  top: 42px;
   left: 0;
   height: auto;
-  background:rgba(150, 35, 200, .8);
+  background:var(--lightBluelightdark);
   backdrop-filter:blur(5px) ;
   display: none;
   line-height: 1.5rem;
@@ -186,6 +187,15 @@ h5{
 }
 .bar3title:hover{
   color: var(--Purple);
+}
+.leftone{
+  background-color: var(--lightPurple);
+}
+.leftone>div>h4{
+  color: var(--Purple);
+}
+.rightone>div>h4{
+  color: var(--lightBlue);
 }
 @media screen and (max-width: 950px){
   .expandable>ul>li{
