--- a/src/App.css
+++ b/src/App.css
@@ -284,6 +284,15 @@ h5{
   background-color: var(--lightBluelight);
   padding: 20px;
 }
+.toemail{
+  transition: all .25s ease-in-out;
+}
+.toemail:hover{
+  padding-left: 5px;
+  color:var(--lightBlue);
+  transform:scale(1.2);
+  
+}
 #bar5{
   background-color: var(--Purple);
 }
