--- a/src/App.css
+++ b/src/App.css
@@ -375,6 +375,41 @@ h5{
 #bar6{
   background-color: var(--lightPurple);
 }
+.modal-wrapper{
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.modal-bckdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 100;
+  background-color: rgba(13, 79, 82, 0.3);
+  
+}
+.modal-box{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 70%;
+  width: 60%;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0,0,0, 0.3);
+  z-index: 101;
+  overflow-y: auto;
+}
+.update-list{
+  color: var(--lightBlue);
+  font-family: 'Catamaran'sans-serif;
+  font-size: 1.5rem;
+  
+}
 @media screen and (max-width: 1220px){
   .expandable>ul>li{
     visibility: hidden;
