--- a/src/App.css
+++ b/src/App.css
@@ -397,7 +397,7 @@ h5{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 70%;
+  height: auto;
   width: 60%;
   background-color: white;
   box-shadow: 0 0 10px rgba(0,0,0, 0.3);
@@ -409,6 +409,11 @@ h5{
   font-family: 'Catamaran'sans-serif;
   font-size: 1.5rem;
   
+}
+.modal-body>p{
+  margin: 15px;
+font-weight:1.5;
+font-size: 1.3rem;
 }
 @media screen and (max-width: 1220px){
   .expandable>ul>li{
